[package]
name = "nastran"
version = "0.0.1"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
repository = "https://github.com/drewkett/nastran-rs"
description = "Rust library for reading NASTRAN files"
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [
  "naspy",
]

[dependencies]
bstr = "0.2"
dtoa = "0.4"
euclid = "0.20"
memmap = "0.7"
smallvec = "1.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bdf"
harness = false
