[package]
name = "nastran"
version = "0.0.1"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
repository = "https://github.com/drewkett/nastran-rs"
description = "Rust library for reading NASTRAN files"
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [
  "naspy",
]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
arrayvec = "0.5"
bstr = "0.2"
either = "1.5"
dtoa = "0.4"
memmap = "0.7"
smallvec = "1.4"
thiserror = "1.0"

rayon = { version = "1.3", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bdf"
harness = false
