[package]
name = "nastran"
version = "0.0.1"
authors = ["Andrew Burkett <burkett.andrew@gmail.com>"]
repository = "https://github.com/drewkett/nastran-rs"
description = "Rust library for reading NASTRAN files"
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [
  "naspy",
]

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
bstr = "0.2"
dtoa = "0.4"
fs2 = "0.4"
memmap2 = "0.5"
smallvec = "1.4"
rayon.version = "1.3"
rayon.optional = true
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bdf"
harness = false
